--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.3",
+    "lodash": "^4.17.11",
+    "normalize.css": "^8.0.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-memory-game": "^1.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "styled-components": "^3.4.6"
+    "store": "^2.0.12",
+    "styled-components": "^3.4.6",
+    "webpack": "^3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
